Added save button functionality

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 9 A.M.
             </div>
             <div class="col col-lg-8">
-                <Textarea></Textarea>
+                <Textarea data-hour="9"></Textarea>
             </div>
             <div class="col col-lg-2">
-                <button>SAVE</button>
+                <button data-hour = "9" class="SAVE">SAVE</button>
             </div>
         </div>
         <div class=" row">
@@ -40,7 +40,8 @@
                 <Textarea></Textarea>
             </div>
             <div class="col col-lg-2">
-                <button>SAVE</button>
+                
+                <button class="SAVE">SAVE</button>
             </div>
         </div>
         <div class=" row">
@@ -51,7 +52,7 @@
                 <Textarea></Textarea>
             </div>
             <div class="col col-lg-2">
-                <button>SAVE</button>
+                <button class="SAVE">SAVE</button>
             </div>
         </div>
         <div class=" row">
@@ -62,7 +63,7 @@
                 <Textarea></Textarea>
             </div>
             <div class="col col-lg-2">
-                <button>SAVE</button>
+                <button class="SAVE">SAVE</button>
             </div>
         </div>
         <div class=" row">
@@ -73,7 +74,7 @@
                 <Textarea></Textarea>
             </div>
             <div class="col col-lg-2">
-                <button>SAVE</button>
+                <button class="SAVE">SAVE</button>
             </div>
         </div>
         <div class=" row">
@@ -84,7 +85,7 @@
                 <Textarea></Textarea>
             </div>
             <div class="col col-lg-2">
-                <button>SAVE</button>
+                <button class="SAVE">SAVE</button>
             </div>
         </div>
         <div class=" row">
@@ -95,7 +96,7 @@
                 <Textarea></Textarea>
             </div>
             <div class="col col-lg-2">
-                <button>SAVE</button>
+                <button class="SAVE">SAVE</button>
             </div>
         </div>
         <div class=" row">
@@ -106,7 +107,7 @@
                 <Textarea></Textarea>
             </div>
             <div class="col col-lg-2">
-                <button>SAVE</button>
+                <button class="SAVE">SAVE</button>
             </div>
         </div>
         <div class=" row">
@@ -117,7 +118,7 @@
                 <Textarea></Textarea>
             </div>
             <div class="col col-lg-2">
-                <button>SAVE</button>
+                <button class="SAVE">SAVE</button>
             </div>
         </div>
     </div>
