save functionality for all the buttons

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <Textarea data-hour="9"></Textarea>
             </div>
             <div class="col col-lg-2">
-                <button data-hour = "9" class="SAVE">SAVE</button>
+                <button data-hour="9" class="SAVE">SAVE</button>
             </div>
         </div>
         <div class=" row">
@@ -37,10 +37,9 @@
                 10 A.M.
             </div>
             <div class="col col-lg-8">
-                <Textarea></Textarea>
+                <Textarea data-hour="10"></Textarea>
             </div>
             <div class="col col-lg-2">
-                
                 <button class="SAVE">SAVE</button>
             </div>
         </div>
@@ -49,7 +48,7 @@
                 11 A.M.
             </div>
             <div class="col col-lg-8">
-                <Textarea></Textarea>
+                <Textarea data-hour="11"></Textarea>
             </div>
             <div class="col col-lg-2">
                 <button class="SAVE">SAVE</button>
@@ -60,7 +59,7 @@
                 12 P.M.
             </div>
             <div class="col col-lg-8">
-                <Textarea></Textarea>
+                <Textarea data-hour="12"></Textarea>
             </div>
             <div class="col col-lg-2">
                 <button class="SAVE">SAVE</button>
@@ -71,7 +70,7 @@
                 1 P.M.
             </div>
             <div class="col col-lg-8">
-                <Textarea></Textarea>
+                <Textarea data-hour="1"></Textarea>
             </div>
             <div class="col col-lg-2">
                 <button class="SAVE">SAVE</button>
@@ -82,7 +81,7 @@
                 2 P.M.
             </div>
             <div class="col col-lg-8">
-                <Textarea></Textarea>
+                <Textarea data-hour="2"></Textarea>
             </div>
             <div class="col col-lg-2">
                 <button class="SAVE">SAVE</button>
@@ -93,7 +92,7 @@
                 3 P.M.
             </div>
             <div class="col col-lg-8">
-                <Textarea></Textarea>
+                <Textarea data-hour="3"></Textarea>
             </div>
             <div class="col col-lg-2">
                 <button class="SAVE">SAVE</button>
@@ -104,7 +103,7 @@
                 4 P.M.
             </div>
             <div class="col col-lg-8">
-                <Textarea></Textarea>
+                <Textarea data-hour="4"></Textarea>
             </div>
             <div class="col col-lg-2">
                 <button class="SAVE">SAVE</button>
@@ -115,7 +114,7 @@
                 5 P.M.
             </div>
             <div class="col col-lg-8">
-                <Textarea></Textarea>
+                <Textarea data-hour="5"></Textarea>
             </div>
             <div class="col col-lg-2">
                 <button class="SAVE">SAVE</button>
